sandbox/output
Reorder.java:10: error: non-static method exchange(List<Integer>) cannot be referenced from a static context
            result.add(exchange(list));
                       ^
1 error
